# ChangeLog for dev-vcs/giggle
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/giggle/ChangeLog,v 1.9 2011/12/04 16:34:44 ikelos Exp $

*giggle-0.6.1 (04 Dec 2011)

  04 Dec 2011; Mike Auty <ikelos@gentoo.org> +giggle-0.6.1.ebuild:
  Bump giggle to 0.6.1.

  21 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> -giggle-0.4.ebuild,
  -giggle-0.4.95.ebuild, -giggle-0.4.96.ebuild, giggle-0.5.ebuild:
  Fix slot-deps on gnome libs

  12 Jul 2010; Markos Chandras <hwoarang@gentoo.org> giggle-0.5.ebuild:
  Stable on amd64 wrt bug #327341

  12 Jul 2010; Christian Faulhammer <fauli@gentoo.org> giggle-0.5.ebuild:
  stable x86, bug 327341

  04 Jun 2010; Mike Auty <ikelos@gentoo.org> giggle-0.4.ebuild,
  -giggle-0.4.90.ebuild, -giggle-0.4.91.ebuild,
  -files/giggle-0.4.91-libgiggle.patch, giggle-0.4.95.ebuild,
  giggle-0.4.96.ebuild, giggle-0.5.ebuild:
  Remove old versions and add gnome-common build dependency to fix bug
  322617.

*giggle-0.5 (04 Jun 2010)

  04 Jun 2010; Mike Auty <ikelos@gentoo.org> +giggle-0.5.ebuild:
  Version bump giggle to 0.5.

  21 Mar 2010; Mike Auty <ikelos@gentoo.org> giggle-0.4.96.ebuild:
  Add in x11-libs/vte to giggle's dependencies, bug 308393.

  17 Mar 2010; Sebastian Pipping <sping@gentoo.org> giggle-0.4.ebuild,
  giggle-0.4.90.ebuild, giggle-0.4.91.ebuild, giggle-0.4.95.ebuild,
  giggle-0.4.96.ebuild:
  Propagate move of dev-util/git to dev-vcs/git

  04 Mar 2010; Mike Auty <ikelos@gentoo.org> +giggle-0.4.ebuild,
  +giggle-0.4.90.ebuild, +giggle-0.4.91.ebuild,
  +files/giggle-0.4.91-libgiggle.patch, +giggle-0.4.95.ebuild,
  +giggle-0.4.96.ebuild, +metadata.xml:
  Move category from dev-util to dev-vcs.

  21 Feb 2010; Jonathan Callen <abcd@gentoo.org> giggle-0.4.96.ebuild:
  Transfer prefix keywords (no other changes)

*giggle-0.4.96 (11 Feb 2010)

  11 Feb 2010; Mike Auty <ikelos@gentoo.org> +giggle-0.4.96.ebuild:
  Version bump giggle to 0.4.96, fixes bug 304511.
