@@ -4,13 +4,13 @@ Hash: SHA1
 DIST giggle-0.5.tar.bz2 486406 RMD160 ee2ff519d7bd29f59a5b4b26342e1dfc7916deb2 SHA1 43143e49be8f510e126c19c68ce19870448e9430 SHA256 2e2c70d25159d31c87d155c9f799e0f1feb30fe26fc8aaf207ca6b3bd9b2b259
 DIST giggle-0.6.1.tar.bz2 1908147 RMD160 56db8094dfe85f63e359c253eded811fcab7ac6e SHA1 790f3ff8eb47896a96c10e0697d17b26fbfcef45 SHA256 47d5da248aae588b69427f8726b8b7cf76701544bb0b567ef823afefe2e39f52
 EBUILD giggle-0.5.ebuild 975 RMD160 f139f396d72067d13617a280d503ddd30e9605c8 SHA1 f78be4fdb60dde543858e22e4670f8a6f9946074 SHA256 764311d57f161e8cea32bf3755f11ffc1ba2b7ec7629a00fb0d8537c6de40b6a
-EBUILD giggle-0.6.1.ebuild 977 RMD160 15b484e6c898ca19e973cedb795c6c5b3308cc19 SHA1 103ae9cb1a1e4c0746970df0c125eca7c7c11300 SHA256 c54a51a4108826e5e5f189180c6ec30a9468f6f856d67ddc4582c1bd2d7f6604
-MISC ChangeLog 4633 RMD160 7297e38a3bab9a68bd43ff92e7dfb785e2c6a734 SHA1 014ff29fbb31a8bae388f3e57355fb119b9b0950 SHA256 7da2b991c4d748ea95ce33716e23de988574259d1cc5d9d1a5b78c8d94de97a5
+EBUILD giggle-0.6.1.ebuild 917 RMD160 bbdec6aeba6ae01722cf2743489e7fbfd7b43353 SHA1 4045b95b58166a0fe10b75050b9e15c0c26a472a SHA256 fbbc1cefe7c1556adaac5843ab9e3b27b950e34689db2aa94608be55652b0ef1
+MISC ChangeLog 4751 RMD160 5cef94910874bff82c7a0e65ca0348f02d0b2e12 SHA1 d9e9eec670a2b8065ee4794ecb9fedd8a9630b7c SHA256 94fedf2a73a66b2b5d711822f95b454bcd655d0c6bd38283789b2f3503116ccd
 MISC metadata.xml 308 RMD160 72fbb179bf7b778d7c47d5fa39cf3ed34d573d24 SHA1 b570907c82eac4b605da77baa919286908abccfd SHA256 99f014e759c422b2db301da36b8f3b84b1bd38fe53e49eb54c2827368e42bcee
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7boTcACgkQu7rWomwgFXqjfgCfQNZiMl51NnaaV4WWhC4WSwKH
-eHwAn35C1VepiKHHDrt75btQJzBkbL47
-=qsay
+iEYEARECAAYFAk7b3zsACgkQu7rWomwgFXqtuACfdOB0bTXGuMAt+byvvxPTs0fL
+ZN8AoKMV9muXfKBMQrCom+vb+LCymAPJ
+=cjNs
 -----END PGP SIGNATURE-----
