@@ -1,8 +1,8 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/giggle/giggle-0.6.1.ebuild,v 1.1 2011/12/04 16:34:44 ikelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/giggle/giggle-0.6.1.ebuild,v 1.2 2011/12/04 20:59:34 ikelos Exp $
 
-EAPI="1"
+EAPI="3"
 
 inherit autotools gnome2
 
@@ -16,12 +16,11 @@ IUSE="eds"
 
 RDEPEND=">=dev-vcs/git-1.5
 		 >=dev-libs/glib-2.18:2
-		 >=x11-libs/gtk+-2.10:2
-		 >=x11-libs/gtksourceview-2.8:2.0
+		 >=x11-libs/gtk+-3.0:3
+		 >=x11-libs/gtksourceview-3.0:3.0
 		 gnome-base/gnome-common
 		 eds? ( gnome-extra/evolution-data-server )
-		 >=gnome-base/libglade-2.4:2.0
-		 >=x11-libs/vte-0.17:0"
+		 >=x11-libs/vte-0.26:2.90"
 DEPEND="${RDEPEND}
 		  sys-devel/gettext
 		>=dev-util/pkgconfig-0.15
@@ -33,8 +32,6 @@ DOCS="AUTHORS ChangeLog NEWS README"
 
 G2CONF="$(use_enable eds evolution-data-server)"
 
-src_unpack() {
-	gnome2_src_unpack
-	cd "${S}"
+src_prepare() {
 	eautoreconf
 }
